fix overflow

--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -32,3 +32,7 @@ h4#weather {
   text-align: left;
   padding-left: 1%;
 }
+
+.card-body#card0  {
+  overflow-x: scroll;
+}
